--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
     
      
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SzvH2oR4HzfCTi/kOM7yK2Y9opJnXtxbL4NrV6lTERz/eocFaVJgNBUeq8Sj9dvt7E0gP/pVz/UU9qWCOjWkBI7qrkUckU+oAOY4PpF1uQftIa+g63I4/zYpn2ZIQo5K">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VHa8tRduMbsJOWb89cXNo95SaTPTndoEGe8XQw6RQlOuWjR53gLY7+UL2z/bw1dUI27qMTlOKk1GpkUxurcy4RaFnXz9Se/R1mV750gWG2EAfanIWFzP36PEjb5RHBBw">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
