--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
     
      
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VHa8tRduMbsJOWb89cXNo95SaTPTndoEGe8XQw6RQlOuWjR53gLY7+UL2z/bw1dUI27qMTlOKk1GpkUxurcy4RaFnXz9Se/R1mV750gWG2EAfanIWFzP36PEjb5RHBBw">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kl3hPN+PZLBAoPis8kgWg+nlPTsSZodoyAdUnYSDhKJYt/wtDE45lw9vJnZB6TTrz6KGeR3j36fQ+1Qz0bRSpGrWT/hA/deCzGp2Q/CxRJR4OhKN0KsNwDWFn8YMXhsM">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
