--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
     
      
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="x26pIGxu7TNQX63h+LHBxAR6oLWVPspYsuqT/Blgf9WEoM3P9p28GkYECEzNUj3TCu3LHr6rdty4sLS+zdAivoVsrFjByX25vepBTv/RZgxWTbz/Oa4Iye8iUi5bbIfZ">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TJ8FYPH/9bfLO62KknSnHeeZCaH8t6qjLywaNt83TKomuoFxQbZ7YHaK6Zik0jbPN3h/geHF66rKpvwhbRxal+gBoO9gVEjFIvRrpvKm4KL4lz3VEjTPpAs46IKCEWpl">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
