--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
     
      
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TJ8FYPH/9bfLO62KknSnHeeZCaH8t6qjLywaNt83TKomuoFxQbZ7YHaK6Zik0jbPN3h/geHF66rKpvwhbRxal+gBoO9gVEjFIvRrpvKm4KL4lz3VEjTPpAs46IKCEWpl">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="km9Ug5SQTVJXLArzeXI/5/wwkqt62ini4N9lFo495YF39nziUg6L5p/zJF24Z2135fUlKgYpo1u2eWOZBTDYBjKbCUSwkUFzNqT2jvuAtZ3ijPegxwSaEYmkEYqHKhsk">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
