create github pages

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/b-logo-128x128.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
-  <title>Contact</title>
+  <title>Barrett Insurance - Contact</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section article content10 cid-r6hStdSiIC" id="content10-30">
     
      
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="l0Hy9Ahs4Ng1cBUzAwvlVYEiYWTnHlWX6JijgMv78h3LogGRhYfNFKFClTHYV5PpwRw8GQHKfhmmfqAZrvLfVTKXFldlxQYa8POvfB14XF/cl55hEbkRZoFbDLR5BLv3">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QWprh3bfbtrLWE7MXUFHG1srgtt9nIilmNfO7RnbNxjXF73rUxm6PUnOVfJVUOWvhao+3FJFRfbkppukexo9codY1BoH2wMVoubX6yoI9f6DoVoB205GWliJgkmR9FWh">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
