--- a/page6.html
+++ b/page6.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/b-logo-128x128.png" type="image/x-icon">
   <meta name="description" content="Site Creator Description">
-  <title>Reviews</title>
+  <title>Barrett Insurance - Reviews</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section article content10 cid-r6hU03S52j" id="content10-32">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section article content10 cid-r6hU03S52j" id="content10-32">
     
      
 
