--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/b-logo-128x128.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Barrett Insurance - Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -253,7 +253,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hdoR9lGwlIAZADjYZVWGv5uiWsPnX3YjzcCw1SLjzAqjpO6KYf1br6Qy4smYoMRYjkz4g055XVh4yoKkW4oHJlLG9hgfuJ0gJUQJ5OTgOaVnXtKZuu8MM2M3Rsr3vthN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s44cLLcPAKZHeMxF3lGqRFbQFymz0a7LMxr6iqZI2Aphi/px3T4aTm/8eRVPqlVu0ypGpHurX/LBnQV0PPOqbeQwQLy2WRPCITy8wd2LU9ejZlUbV1JqN8kSKNXe6r4P">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
