--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/b-logo-128x128.png" type="image/x-icon">
   <meta name="description" content="Site Creator Description">
-  <title>Media</title>
+  <title>Barrett Insurance - Media</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content10 cid-r6hPvXbmdb" id="content10-2q">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section article content10 cid-r6hPvXbmdb" id="content10-2q">
     
      
 
