--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WcJRdjfZ7JvW3u/pTs5QYr6q7EHBQEGNQQHZi3cpZW/bwZp8/Q/YMErK1lW46OWPrrQEHDFGCDjTxgP/mcBsdaNSeLavYuO/w6Mx0NpHB0QuJW0SOMNuyc2WNSYKbd/O">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1xn8c9XpBhamgjLENMAneVvVSPX6E0S5V9h9LSpajmRuzLoUuJDyClyAM8MQ72CVcOI6bHPJ7nLTMiZHPIx4cIhVIzCVTgRYNMIIOZEWdWU2CgOUSOkMIXdwtvg0MbeE">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
