create github pages

--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2xt3F7Im24Pz8NlRgIjrJSGLiwqS9HeWG1O7aFyOVZ2+jWVRh1GCO4hFoSZi9tTb//Y4ZISaAtZVy7veW0DG+NSwIsgBVv9kckkegYYzZ0qmzfOt7mCw7Z7a8kpYrs/A">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XUM8V7ZDeyk776JqbbVWQL789KbwW9r8Y1bYmdFjsBdmTs023rUcOMMLGeonFhs/+CzfzDsfSnvohssSA2XA6OaFfg4KA+LgrGa6COwWJ8nG0gd2+8HtLk2LPrdkgr9D">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
