--- a/page3.html
+++ b/page3.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6ybmG6CAi" id="content5-44">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section content5 cid-r6ybmG6CAi" id="content5-44">
 
     
 
@@ -81,7 +81,7 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Fox 47's<br>The Morning Blend!</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>Fox 47's<br>The Morning Blend!</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">
                         Barrett Insurance Health Expert, Joe Ruden, discusses<br>changes in health insurance on Fox 47's The Morning Blend! </p>
@@ -105,8 +105,8 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Classic Car Insurance</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>
+                    Classic Car Insurance</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">
                         Classic Auto Insurance Storage Tips with Clint Barrett</p>
@@ -130,8 +130,8 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Commercial Insurance</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>
+                    Commercial Insurance</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">
                         'Good Night, Boss,' with our partner, Frankenmuth Insurance. </p>
@@ -155,8 +155,8 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    "Toys" Insurance</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>
+                    "Toys" Insurance</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">
                         Boats, jet skis and snowmobile insurance tips with Clint Barrett</p>
@@ -180,8 +180,8 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Group Health Coverage</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>
+                    Group Health Coverage</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">'Good Morning, Boss!'&nbsp;with our partner, Frankenmuth Insurance.</p>
                 </div>
@@ -204,8 +204,8 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Landlord Tips</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>
+                    Landlord Tips</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">All tenants should have renters insurance with Clint Barrett.</p>
                 </div>
@@ -228,7 +228,7 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Medicare &amp; Health Insurance</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>Medicare &amp; Health Insurance</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">
                         Introducing ‘Option-2-Option,’ only at Barrett Insurance </p>
@@ -252,7 +252,7 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Motorcycle Insurance</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>Motorcycle Insurance</strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-7">Commercial - ‘Dirt Bags'</p>
                 </div>
