--- a/page4.html
+++ b/page4.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section content5 cid-r6ybc6wNI7" id="content5-42">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6ybc6wNI7" id="content5-42">
 
     
 
@@ -599,7 +599,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
     </div>
 </section>
 
-<section class="cid-r6hZe0OTKx" id="footer1-3b">
+<section class="cid-r6zLacAhxW" id="footer1-4c">
 
     
 
@@ -631,7 +631,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community<br></a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
