--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fAyNh436b8zLn3GFR6PI49To/tZvKSwt/vpAgt8n9oAW1qjXsMK5ABYCIzYMR5fI6o6gYq3qo14RY/cUXlT4U2V6UR+DX+tuFLLn0JVgzfMuCivocgwsPYp8uLpl+UaL">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bH7IohCU2O3232TuWVRdTQ9OBvfZeTw3GMh/CjsowkBf8lQCtxuBbYtDDhoId8juw41XO0UqjzGNmipOTgOkKDioseOYl7VP/+OPFcnCve3isa7HqXrEk7x97mxufqZ5">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -141,7 +141,7 @@
     </div>
 </section>
 
-<section class="cid-r6hY8o8hXk" id="footer1-38">
+<section class="cid-r6zL1HgEhb" id="footer1-4a">
 
     
 
@@ -173,7 +173,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community<br></a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
