--- a/page5.html
+++ b/page5.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content5 cid-r6yaYGP0qe" id="content5-41">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-r6yaYGP0qe" id="content5-41">
 
     
 
@@ -629,7 +629,7 @@
     </div>
 </section>
 
-<section class="cid-r6hZi6SHQW" id="footer1-3c">
+<section class="cid-r6zLdz5EiH" id="footer1-4d">
 
     
 
@@ -661,7 +661,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community<br></a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
