create github pages

--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lNf3BJu2JfgzhcQ9YYQn8qQ+ALuqYdOFKBjyhEWjR8d4iGgc7cE8LE3VkBHVrxDqRQX6V9WG1bXqkD7YEEgFsJSng8Hey421Z02n6VXXhRCFb2rJvovGgThgL09hTu4a">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4UsPj4QKkoYkyZkRVQNcuvWKm9Y8Y30xfkKmn/dF6BeSUbThLg9JZRI92s/yt/13Ue9O6OiTzMUHJTsBgziIC1pWHavA3ID/q2THgcJUMoWqtr5EGAnfvh++dE5GkWzT">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
