--- a/page5.html
+++ b/page5.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content5 cid-r6yaYGP0qe" id="content5-41">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content5 cid-r6yaYGP0qe" id="content5-41">
 
     
 
@@ -549,7 +549,7 @@
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="https://www.facebook.com/Penny-Lane-the-Bulldog-1180045822030306/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span>Penny's Facebook</a>
-                    <a class="btn btn-primary-outline display-4" href="https://www.instagram.com/pennylanethebarrett/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>Penny's Instragram</a></div>
+                    <a class="btn btn-primary-outline display-4" href="https://www.instagram.com/pennylanethebarrett/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>Penny's Instagram</a></div>
             </div>
         </div>
     </div>
