create github pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -299,7 +299,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ps8kfLFrSyaDAL26HZ5b8GOPwrMrMEMTB9jjixNHL4P7tW5o4W41u90a4p+Tv96aIOxsf9tNeLc/ipjxTHeutjQMM/9OIm9dCoByoRgPi4jvWgckcGxm9Q6OCfxjANP7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rj9OiiPc2KeCmEwSo5R4KZtr5KIgEToTvpfz0t9ssbdLtsA6AmQVBZViupqZXkON8XweOqWgHoVIrWMTrwxUUsL4VMQcOkrkxdzCFwCKnguTdbBtgt73ZdtHl4m3c3+b">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -382,7 +382,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community<br></a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community</a><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
