--- a/page6.html
+++ b/page6.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section content5 cid-r6ybEqrfwP" id="content5-46">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6ybEqrfwP" id="content5-46">
 
     
 
@@ -220,7 +220,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community<br></a><a href="page4.html" class="text-black" style="font-weight: bold;"><br></a><br><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community</a><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
