--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5"><strong>
-                           Joe Rudden</strong></p>
+                           Joe Ruden</strong></p>
                     </div>
                     <div class="item-role px-2">
                         <p>joe@barrettins.com</p>
@@ -299,7 +299,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="19E55OE+LL0NA/EUfYlPcAnQAoYuNOFw/HLLWi2blTiBDSMcUnK35tx1mxqZaPA5dtzCciSGyD8E5iJeusXxG6QqywAO1OUXibcVxS2fGXWqPt3cxb8fxRY3c9Gziwrf">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CTV44qsjssV2zKi4XbR64htaliaI1WM9bjL+tdf23R/RWXj0i2k7LVIxNiVeq9BzGBeA3DUwE23gFfJx4ynUDs6+vi0jTuIjAfkl97CunjrBySZlS/BRgtM2+qFuSkr3">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
